Removed the MongoDB test helper since quarkus is doing quiet fine now.
Signed-off-by: klenkes74 <rlichti@kaiserpfalz-edv.de>